--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Viktoras Makauskas blog
-email: viktoras@neglostyti.com
+email: 
 description: > # this means to ignore newlines until "baseurl:"
   An experimental blog setup for now.
 baseurl: "" # the subpath of your site, e.g. /blog/
